<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_alarm"
        android:name="com.example.myapplication.ui.alarms.AlarmsFragment"
        android:label="@string/title_alarms"
        tools:layout="@layout/fragment_alarm">
        <action
            android:id="@+id/toEditAlarmFragment"
            app:destination="@id/navigation_editalarm" />
        <action
            android:id="@+id/toAddAlarmFragment"
            app:destination="@id/navigation_addalarm" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editalarm"
        android:name="com.example.myapplication.ui.alarms.EditAlarmsFragment"
        android:label="Edit Alarm"
        tools:layout="@layout/fragment_edit_alarms">
        <action
            android:id="@+id/toAlarmFragment"
            app:destination="@id/navigation_alarm" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addalarm"
        android:name="com.example.myapplication.ui.alarms.AddAlarmsFragment"
        android:label="Add Alarm"
        tools:layout="@layout/fragment_addalarm">
        <action
            android:id="@+id/toAlarmFragment"
            app:destination="@id/navigation_alarm" />
    </fragment>


    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.example.myapplication.ui.medication.MedicationFragment"
        android:label="@string/title_medication"
        tools:layout="@layout/fragment_medication" />
    <fragment
        android:id="@+id/navigation_rewards"
        android:name="com.example.myapplication.ui.rewards.RewardsFragment"
        android:label="@string/title_rewards"
        tools:layout="@layout/fragment_rewards" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/navigation_editprofile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editprofile"
        android:name="com.example.myapplication.ui.profile.EditProfileFragment"
        android:label="EditProfile"
        tools:layout="@layout/fragment_editprofile" />

</navigation>